[gd_scene load_steps=7 format=3 uid="uid://vnpaxyj7vo04"]

[ext_resource type="Script" uid="uid://bf55bs8jdtm1q" path="res://door.gd" id="1_v6xrn"]
[ext_resource type="Texture2D" uid="uid://c28x10a3pijgj" path="res://drawings/Tilemap.png" id="2_0phs7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_50cdl"]
atlas = ExtResource("2_0phs7")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4xadh"]
atlas = ExtResource("2_0phs7")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_6hwww"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_50cdl")
}],
"loop": true,
"name": &"closed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4xadh")
}],
"loop": true,
"name": &"open",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v6xrn"]
size = Vector2(9, 34)

[node name="Door" type="Node2D"]
script = ExtResource("1_v6xrn")

[node name="DoorSprite" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_6hwww")
animation = &"closed"
autoplay = "closed"

[node name="PlayerHitbox" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHitbox"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_v6xrn")

[connection signal="body_entered" from="PlayerHitbox" to="." method="_on_player_hitbox_body_entered"]
[connection signal="body_exited" from="PlayerHitbox" to="." method="_on_player_hitbox_body_exited"]
